# crc-prune-stale

./: README.md  pyproject.toml
.github/workflows/: CodeQL.yml  PackagePublish.yml  PackageTest.yml
crc_prune_stale/: __main__.py  cli.py  log.py  notify.py  shell.py  slurm.py
prune_stale/: __main__.py  cli.py  log.py  notify.py  slurm.py
tests/: test_cli.py  test_log.py  test_main.py  test_notify.py  test_shell.py  test_slurm.py
