[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "crc-prune-stale"
version = "0.0.0"
description = "Prune stale Slurm jobs from the job queue."
authors = [{ name = "Pitt-CRCD" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry.group.tests.dependencies]
coverage = "*"

[tool.poetry.scripts]
prune-stale = "crc_prune_stale.__main__:main"
